--- a/app/src/main/res/layout/view_home.xml
+++ b/app/src/main/res/layout/view_home.xml
@@ -15,7 +15,7 @@
       android:textSize="20sp"
       />
 
-  <android.support.v7.widget.RecyclerView
+  <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/now_playing"
       android:layout_width="match_parent"
       android:layout_height="0dp"
@@ -30,7 +30,7 @@
       android:textSize="20sp"
       />
 
-  <android.support.v7.widget.RecyclerView
+  <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/most_popular"
       android:layout_width="match_parent"
       android:layout_height="0dp"
