--- a/app/src/main/res/layout/view_main.xml
+++ b/app/src/main/res/layout/view_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     >
 
-  <android.support.v7.widget.Toolbar
+  <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
@@ -24,7 +24,7 @@
       app:layout_constraintTop_toBottomOf="@id/toolbar"
       />
 
-  <android.support.design.widget.BottomNavigationView
+  <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/bottom_navigation"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
