--- a/app/src/main/res/layout/view_favorites.xml
+++ b/app/src/main/res/layout/view_favorites.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<nyc.c4q.vice.mobile.ui.FavoritesView
+<org.pursuit.demo.mobile.ui.FavoritesView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,4 +21,4 @@
       android:visibility="gone"
       />
 
-</nyc.c4q.vice.mobile.ui.FavoritesView>
+</org.pursuit.demo.mobile.ui.FavoritesView>
