--- a/app/src/main/res/layout/view_main.xml
+++ b/app/src/main/res/layout/view_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<nyc.c4q.vice.mobile.ui.MainView
+<org.pursuit.demo.mobile.ui.MainView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -38,4 +38,4 @@
       app:menu="@menu/bottom_navigation_main"
       />
 
-</nyc.c4q.vice.mobile.ui.MainView>
+</org.pursuit.demo.mobile.ui.MainView>
